fixed spacings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,7 +324,7 @@ p, a {
     margin-left: 14rem; }
     @media only screen and (max-width: 37.5em) {
       .splash-landing .btn-right {
-        margin: 0; } }
+        margin-left: 11rem; } }
   .splash-landing .btn-center {
     position: absolute;
     top: 50%;
