--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -151,7 +151,7 @@
 .btn-right {
     margin-left: 14rem;
     @include respond(phone) {
-        margin:0;
+        margin-left:11rem;
     }
 }
 
